logs/Slang/generated/keywords/5.6.2--keyword_program.sv.log
name: keyword_program
description: The 'program' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_program.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_program.sv:8:8: error: expected declarator
    bit program;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_program.sv:8:16: error: expected identifier
    bit program;
               ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_program.sv:9:1: error: expected member
endmodule
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_program.sv:9:10: error: expected 'endprogram'
endmodule
         ^
